--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="http://www.google.com/">Google</a>
-  , The most popular search engine.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Home | Ruby on Rails Tutorial Sample App</title>
+  </head>
+  <body>
+    <h1>Sample App</h1>
+    <p>
+      This is the home page for the
+      <a href="http://www.google.com/">Google</a>
+      , The most popular search engine.
+    </p>
+  </body>
+</html>
